# media-pipeline

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: test.yml
discovery/: __init__.py  engine.py  logging.py  scoring.py  taste.py  types.py
docs/: API-REFERENCE.md  ARCHITECTURE.md  AUTOMATION.md  CACHYOS.md  CHANGELOG.md  COMMANDS.md  CONFIG.md  DISCOVERY.md  ECOSYSTEM.md  FLOW.md  HARDWARE.md  HEALTH.md  ISSUES-SOLUTIONS.md  LAPTOP.md  MASTER.md  NETWORK.md  PIPELINE.md  QBIT.md  README.md  RECOVERY.md  SERVICES.md  SETUP.md  TASTE.md  TIMERS.md  VM-GPU.md  VM-WINDOWS.md
docs/.github/workflows/: test.yml
safeguards/: __init__.py  guard.py
scripts/: anti-dupe.py  anti-dupe.sh  auto-dedup.py  auto-import-watchdog.py  balance-8tb.sh  classify_media.py  cleanup-overflow.sh  complete-media.py  dashboard.py  discovery-engine.py  generate-plexlist.sh  health-score.sh  integrity-check.sh  nightly-backup.sh  overflow-controller.py  pipeline-gc.sh  plex-discord-bot.py  plexbot.py  protect-20tb.sh  protect-8tb.sh  scan-now.sh  seed-finder.sh  smart-fill.py  stalled-rescue.sh  sync-plexlist.py  sync-plexlist.sh  tdarr-post-encode.sh  torrent-doctor.sh  update-havelist.py  validate_config.py
systemd/: pipeline-commands.sh  pipeline-units.conf  timer-units.conf
tests/: test_pipeline.py
